unpackaged/objects/copado__Selenium_Test_Group__c.object
<CustomObject>
	<fields>
		<fullName>copado__Description__c</fullName>
		<label>Description</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>copado__Environment__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Environment</label>
		<referenceTo>copado__Environment__c</referenceTo>
		<relationshipLabel>Selenium Test Groups</relationshipLabel>
		<relationshipName>Selenium_Test_Groups</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__External_Id__c</fullName>
		<externalId>true</externalId>
		<label>External Id</label>
		<length>255</length>
		<type>Text</type>
		<unique>true</unique>
	</fields>
	<fields>
		<fullName>copado__Manage_Test_Runs_manually__c</fullName>
		<defaultValue>false</defaultValue>
		<inlineHelpText>When this option is unchecked, Copado will automatically create/update/remove Test Runs for each Suite/ Credential.

Check it to manage the Test Runs in this group manually, then go to a Test Run list view, and use the &quot;Add to Test Group&quot; option.</inlineHelpText>
		<label>Manage Test Runs manually</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copado__Run_Sequentially__c</fullName>
		<defaultValue>false</defaultValue>
		<inlineHelpText>If checked, tests runs will be executed in sequence, one after another, instead of doing it in parallel</inlineHelpText>
		<label>Run Sequentially</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copado__Selenium_Settings__c</fullName>
		<deleteConstraint>Restrict</deleteConstraint>
		<inlineHelpText>All tests runs belonging to this Test Group will use these Selenium Settings.</inlineHelpText>
		<label>Selenium Settings</label>
		<referenceTo>copado__Selenium_Settings__c</referenceTo>
		<relationshipLabel>Selenium Test Groups</relationshipLabel>
		<relationshipName>Selenium_Test_Groups</relationshipName>
		<required>true</required>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Status_Date__c</fullName>
		<label>Status Date</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>copado__Status_Icon__c</fullName>
		<formula>IMAGE( 
CASE(TEXT(copado__Status__c), 

&apos;Completed with errors&apos;, &apos;/resource/&apos; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;) &amp; &apos;Statics/img/icons/warning16.png&apos;,

&apos;Completed successfully&apos;, &apos;/resource/&apos; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;) &amp; &apos;Statics/img/icons/confirm16.png&apos;,

&apos;Completed with warnings&apos;, &apos;/resource/&apos; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;) &amp; &apos;Statics/img/icons/confirm16.png&apos;,


&apos;In Progress&apos;, &apos;/resource/&apos; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;) &amp; &apos;Statics/img/icons/loading.gif&apos;,

&apos;Queued&apos;, &apos;/resource/&apos; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;) &amp; &apos;Statics/img/icons/loading.gif&apos;,

&apos;/s.gif&apos;),

TEXT(copado__Status__c) 
)</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>Status Icon</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Status__c</fullName>
		<label>Status</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Queued</fullName>
				</value>
				<value>
					<fullName>In Progress</fullName>
				</value>
				<value>
					<fullName>Completed with Errors</fullName>
				</value>
				<value>
					<fullName>Completed Successfully</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Type__c</fullName>
		<description>If “Regression Test” or “User Story Test” is selected, then all Credentials associated to that Test Group must be linked to the same environment.</description>
		<inlineHelpText>If “Regression Test” or “User Story Test” is selected, then all Credentials associated to that Test Group must be linked to the same environment.</inlineHelpText>
		<label>Type</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Default</fullName>
				</value>
				<value>
					<fullName>Regression Test</fullName>
				</value>
				<value>
					<fullName>User Story Test</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<label>Selenium Test Group</label>
	<listViews>
		<fullName>copado__All</fullName>
		<columns>NAME</columns>
		<columns>copado__Selenium_Settings__c</columns>
		<columns>copado__Description__c</columns>
		<columns>copado__Status__c</columns>
		<columns>copado__Status_Icon__c</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
		<language>en_US</language>
	</listViews>
	<nameField>
		<label>Selenium Test Group Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Selenium Test Groups</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
	<validationRules>
		<fullName>copado__Environment_Required</fullName>
		<active>true</active>
		<description>If the Type value is equal to &quot;Regression Test&quot; or &quot;User Story Test&quot;, the Environment field must have a value.</description>
		<errorConditionFormula>AND( ISBLANK( copado__Environment__c ), OR(ISPICKVAL( copado__Type__c , &quot;Regression Test&quot;), ISPICKVAL( copado__Type__c , &quot;User Story Test&quot;)))</errorConditionFormula>
		<errorDisplayField>copado__Environment__c</errorDisplayField>
		<errorMessage>The Environment field is required if the Type is &quot;User Story Test&quot; or &quot;Regression Test&quot;.</errorMessage>
	</validationRules>
</CustomObject>